CTA Call Button Alignment + Position Fix

--- a/ThriveV2/assets/css/style.css
+++ b/ThriveV2/assets/css/style.css
@@ -2324,6 +2324,19 @@ p {
   padding-bottom: 225px;
 }
 
+.phone-button {
+  display: inline-flex;
+  align-items: center; /* This centers content vertically */
+  justify-content: center; /* This centers content horizontally (if needed) */
+  padding: 0px 10px;
+  background-color: #5a7d5a; /* Change this to your desired color */
+  color: white;
+  font-size: 16px;
+}
+.phone-button i {
+  margin-right: 10px; /* Space between the icon and text */
+  font-size: 18px;
+}
 /* ADDED CSS */
 
 /* Hero Image Slideshow */
